# airnd-market

./: .gitignore  Airnd-Bucket.drawio  LICENSE  Makefile  README.MD  architecture.drawio
docs/: architecture.drawio
services/: README.md
services/job/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  init-postgres.py  init_db.py  main.py  nodemon.json  pyproject.toml  requirements.txt  teardown_db.py
services/job/config/: job.yaml
services/job/db/: init.py  init_db.py  model.py  seed.py
services/job/job/: config.py  db.py  error.py  middlewares.py  routes.py  service.py  utils.py
services/job/job.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/job/server/: error.py  routes.py  service.py
services/job/service/: config.py  db.py  middlewares.py  routes.py  service.py  utils.py
services/job/src/: app.py
services/sentry/: .env  .gitignore  docker-compose.yml
services/sentry/sentry/: config.yml  config.yml-e
services/user/: .env  Dockerfile  Makefile  README.md  docker-compose.yml  init-postgres.py  main.py  pyproject.toml
services/user/tests/: test_user.py
services/user/user/: config.py  db.py  error.py  middlewares.py  routes.py  security.py  service.py  utils.py
