[tool.poetry]
name = "job"
version = "0.1.0"
description = "The Job service provides an API for creating, fetching, updating and deleting jobs"
authors = ["TK <tktaofik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.0"
aiohttp = "^3.6.2"
pydash = "^4.7.6"
asyncpgsa = "^0.26.1"
python-dotenv = "^0.10.3"
psycopg2-binary = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
